# proxmox-iso-pipeline

./: .flake8  .gitignore  README.md  SECURITY.md  VERSIONS.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: agent.md
.github/agents/: agent.md
.github/workflows/: build-iso.yml
config/: firmware-sources.json  preseed.cfg
docker/: Dockerfile  entrypoint.sh
docs/: README.md  api-reference.md  architecture.md  configuration.md  developer-guide.md  operator-guide.md  troubleshooting.md  user-guide.md
scripts/: build-early-microcode.sh  build-iso.sh  download-firmware.sh  inject-firmware-squashfs.sh  inject-firmware.sh  post-install-firmware.sh  rebuild-iso.sh  validate-tools.sh
src/: __init__.py  builder.py  config.py  firmware.py  performance.py
